--- a/src/gazap-site/src/main/webapp/static/css/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/css/layout-single.less
@@ -5,15 +5,15 @@ a#auth-welcome {
     color: white;
 }
 
-.navbar .nav > .gamer-label > span {
-    padding: 10px 0 11px 10px;
-    line-height: 19px;
-    color: white;
-    float: none;
-    display: block;
+.navbar .nav > li.unfade > a {
+   opacity: 1;
+   color:white;
+   padding-right: 0;
+   font-weight: bold;
+ }
 
-    &.narrow {
-        padding-left: 0;
-        padding-right: 0;
-    }
+.navbar .nav > li.unfade.dropdown .caret{
+    color:white;
+    opacity: 1;
 }
+
