--- a/src/gazap-site/src/main/webapp/static/css/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/css/layout-single.less
@@ -6,10 +6,11 @@ a#auth-welcome {
 }
 
 .navbar .nav > li.unfade > a {
-   opacity: 1;
-   color:white;
-   padding-right: 0;
-   font-weight: bold;
+    opacity: 1;
+    color:white;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: bold;
  }
 
 .navbar .nav > li.unfade.dropdown .caret{
