gamza self design

--- a/src/gazap-site/src/main/webapp/static/landscape/less/_config.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/_config.less
@@ -11,29 +11,11 @@
 @orange:#f89406;
 @green:#008000;
 
-@basefamily: arial, sans-serif;
-@basefont: 13px;
-@baseline: 18px;
+@baseFontFamily: arial, sans-serif;
+@baseFontSize: 13px;
+@baseLineHeight: 18px;
+@textColor:#222;
 @color: #222;
 
-@h_color: @color;
-
-@gridColumnWidth: 100px;
-@gridGutterWidth: 5px;
-
-/*@background: #000;*/
-@background: #FDFDFD;
-@body_min_width: 1280px;
-@body_min_height: 320px;
-@body_background: #FFF;
-
-@bodymenu_width:250px;
-
-@footer_height: 0;
-
-// TOP BAR
-@header_height: 34px;
-@topbar_back: #D3D3D3;
-
-@button-fontsize: 13px;
-@button-height: 30px;
+@linkColor: #66A;
+@linkColorHover: #00A;
