--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -4,10 +4,17 @@
 @import "bootstrap/reset.less";
 @import "bootstrap/scaffolding.less";
 @import "bootstrap/type.less";
+@import "bootstrap/alerts.less";
+@import "bootstrap/forms.less";
+@import "bootstrap/tooltip.less";
+@import "bootstrap/popovers.less";
 
 .clear {
     float:none;
     clear: both;
+}
+.hidden {
+    display: none;
 }
 
 @import "layout-single.less";
