--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -166,7 +166,7 @@ a:visited {
             display:inline;
             margin-left: 3px;
             li {
-                display:inline;
+                display:inline-block;
                 margin-left: 3px;
                 a {
                     float:none;
@@ -185,9 +185,10 @@ a.auth-provider-invoke.x26
     background: transparent url(../img/socials-26.png) no-repeat 26px 26px;
     border: none;
     border-radius: 1px;
-    text-indent: -9999px;
-    &:focus {
-      border-color: rgba(82,168,236,.8);
+    color: transparent;
+    &:focus,
+    &:hover {
+        box-shadow: 0 0 3px rgba(82,168,236,.8);
     }
     &.facebook {
         background-position: 0 0;
@@ -203,4 +204,11 @@ a.auth-provider-invoke.x26
     }
 }
 
-
+#registerForm {
+    #recaptchaContainer{
+        width: 320px;
+        height: 130px;
+        margin: 0 auto;
+        padding-bottom: 10px;
+    }
+}
