--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -210,5 +210,10 @@ a.auth-provider-invoke.x26
         height: 130px;
         margin: 0 auto;
         padding-bottom: 10px;
+        p.wait-message {
+            width: 100%;
+            text-align: center;
+            padding-top: 50px;
+        }
     }
 }
