--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -16,5 +16,10 @@
 .hidden {
     display: none;
 }
+.pull-right {
+    float: right;
+}
 
 @import "layout-single.less";
+@import "icons.less";
+@import "menu.less";
