--- a/src/gazap-site/src/main/webapp/static/landscape/less/_config.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/_config.less
@@ -62,3 +62,6 @@
 @zindexFixedNavbar:     1030;
 @zindexModalBackdrop:   1040;
 @zindexModal:           1050;
+
+// Buttons
+@primaryButtonBackground:    @linkColor;
