--- a/src/gazap-site/src/main/webapp/static/landscape/less/menu.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/menu.less
@@ -8,6 +8,7 @@ ul.menu-column {
             text-decoration: none;
             &:hover{
                 background-color: #eeeeee;
+                color: black;
             }
         }
     }
