--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -7,6 +7,7 @@
 @import "bootstrap/alerts.less";
 @import "bootstrap/forms.less";
 @import "bootstrap/buttons.less";
+@import "bootstrap/button-groups.less";
 @import "bootstrap/tooltip.less";
 @import "bootstrap/popovers.less";
 
