--- a/src/gazap-site/src/main/webapp/static/landscape/less/menu.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/menu.less
@@ -13,3 +13,13 @@ ul.menu-column {
         }
     }
 }
+
+ul.line {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+    > li {
+        float: left;
+    }
+}
