--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -1,4 +1,7 @@
-@import "_config.less";
+@import "variables.less";
+
+@sectionHeaderBackground: #eee;
+@sectionHeaderColor: #333;
 
 @import "bootstrap/mixins.less";
 @import "bootstrap/reset.less";
@@ -33,7 +36,8 @@ a:visited {
     }
 }
 
-@import "_mixin.less";
+@import "mixins.less";
 @import "icons.less";
 @import "menu.less";
 @import "layout-single.less";
+@import "maincolumn.profile-page.less";
