--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -108,10 +108,11 @@ form {
         >.account-name {
             >.username {
                 padding: 4px;
-                font-size: 12px;
+                font-size: 13px;
+                line-height: 30px;
                 > img {
                     position: relative;
-                    top: 4px;
+                    top: 0;
                 }
                 > span {
                     padding-left: 4px;
