--- a/src/gazap-site/src/main/webapp/static/landscape/less/maincolumn.profile-page.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/maincolumn.profile-page.less
@@ -32,6 +32,7 @@
             text-align: center;
             padding: 20px;
             font-style: italic;
+            margin: 0;
         }
     }
 }
