--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout-single.less
@@ -315,3 +315,30 @@ a.auth-provider-invoke.x26
         }
     }
 }
+
+#mainColumn {
+    section{
+        > .section-header-form {
+            background: @sectionHeaderBackground;
+            padding: 10px 0 0;
+            form {
+                margin:0;
+                .control-group {
+                    text-align: center;
+                    .controls input {
+                        margin-bottom: 0;
+                        width: 80%;
+                    }
+                }
+                .submit-group {
+                    text-align: right;
+                    padding: 0 10px 9px;
+                    margin-bottom: 0;
+                }
+                .alert {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
