--- a/src/gazap-site/src/main/webapp/static/landscape/less/profile-page.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/profile-page.less
@@ -1,7 +1,6 @@
 #mainColumn.profile-page {
-    top: 45px;
-
     >h1 {
+        padding: 10px 10px 0;
         span.noname {
             color: #aaa;
             font-style: italic;
