--- a/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/layout.less
@@ -49,4 +49,4 @@ textarea {
 @import "menu.less";
 @import "layout-single.less";
 @import "profile-page.less";
-@import "game-title.less";
+@import "world-title.less";
