--- a/src/gazap-site/src/main/webapp/static/landscape/less/menu.less
+++ b/src/gazap-site/src/main/webapp/static/landscape/less/menu.less
@@ -1,15 +1,16 @@
 ul.menu-column {
     >li {
-        >a {
+        >a,
+        >span {
             padding: 3px 15px;
             text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
             display: block;
             color: #0088CC;
             text-decoration: none;
-            &:hover{
-                background-color: #eeeeee;
-                color: black;
-            }
+        }
+        >a:hover {
+            background-color: #eeeeee;
+            color: black;
         }
     }
 }
